Added a flex container that contains three flex items in the footer tag

--- a/project_13.html
+++ b/project_13.html
@@ -110,6 +110,69 @@
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="last-container">
+                <div class="last-container-one">
+                   <div>
+                    <h2>Made remotely with love by Stark Lab, Inc.</h2>
+                   </div>
+                   <div>
+                    <img src="./Images/stark logo.png" alt="Stark Logo" class="last-image-one">
+                   </div>
+                </div>
+
+                <div class="last-container-two">
+                    <div>
+                        <h4>PRODUCT</h4>
+                        <p>Stark for Figma</p>
+                        <p>Stark for Figjam</p>
+                        <p>Stark for Sketch</p>
+                        <p>Stark for Chrome</p>
+                        <p>Stark for Firefox</p>
+                        <p>Stark for Edge</p>
+                        <p>Stark for Safari</p>
+                        <p>Stark for Arc</p>
+                        <p>Stark for Brave</p>
+                    </div>
+                    <div>
+                        <h4>RESOURCES</h4>
+                        <p>Blog</p>
+                        <p>Library</p>
+                        <p>Release Notes</p>
+                    </div>
+                    <div>
+                        <h4>HELP</h4>
+                        <p>My Account</p>
+                        <p>Support Docs</p>
+                        <p>Contact Us</p>
+                        <p>Feature Requests</p>
+                    </div>
+                    <div>
+                        <h4>COMPANY</h4>
+                        <p>Press Releases</p>
+                        <p>Privacy Policy</p>
+                        <p>
+                            Cookie Policy
+                        </p>
+                        <p>Security Overview</p>
+                        <p>Status</p>
+                        <p>Terms of Service</p>
+                        <p>Code of Conduct</p>
+                    </div>
+                </div>
+                <div class="last-container-three">
+                    <div class="mini-last-container-three">
+                        <img src="./Images/twitter.png" alt="Twitter Icon" class="last-image-two">
+                        <img src="./Images/instagram.png" alt="Instagram Icon" class="last-image-two">
+                        <img src="./Images/slack.png" alt="Slack Icon" class="last-image-two">
+                        <img src="./Images/share-linkedin.png" alt="LinkedIn Icon" class="last-image-two">
+                        <img src="./Images/youtube.png" alt="Youtube Icon" class="last-image-two">
+                    </div>
+                    <div>
+                        <p class="last-text">STARK  LAB, INC.    COPYRIGHT 2023</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
