--- a/project_13.html
+++ b/project_13.html
@@ -15,12 +15,12 @@
                 <p>
                     <img src="./Images/stark logog.png" alt="Stark Logo" class="first-image">
                 </p>
-                <p>PRODUCT</p>
-                <p>PRICING</p>
-                <p>BLOG</p>
-                <p>LIBRARY</p>
-                <p>SUPPORT</p>
-                <p>LOG IN</p>
+                <p class="nav-item">PRODUCT</p>
+                <p class="nav-item">PRICING</p>
+                <p class="nav-item">BLOG</p>
+                <p class="nav-item">LIBRARY</p>
+                <p class="nav-item">SUPPORT</p>
+                <p class="nav-item">LOG IN</p>
                 <p>
                     <a href="#" class="first-btn">30-DAY FREE TEAM TRIAL</a>
                 </p>
@@ -174,5 +174,7 @@
                 </div>
             </div>
         </footer>
+
+        <script src="./project_13.js"></script>
     </body>
 </html>
