Nested another ul tag in the li tag with the class name third-list-item

--- a/project_13.html
+++ b/project_13.html
@@ -38,6 +38,30 @@
                         <li class="second-list-item">Collections</li>
                         <li class="third-list-item">Categories 
                             <img src="./Images/nav_arrow_down_icon.png" alt="Arrow Down Icon" class="arrow-image">
+                            <ul class="drop-down-list">
+                                <li>All</li>
+                                <li>Blogs & Articles</li>
+                                <li>Books</li>
+                                <li>Checklists</li>
+                                <li>Colors</li>
+                                <li>Community</li>
+                                <li>Companies</li>
+                                <li>Courses & Certificates</li>
+                                <li>Design Patterns</li>
+                                <li>Design Systems</li>
+                                <li>Emails</li>
+                                <li>Employment</li>
+                                <li>Gaming</li>
+                                <li>Guides</li>
+                                <li>Media</li>
+                                <li>Mobile</li>
+                                <li>Newsletters</li>
+                                <li>Plugins</li>
+                                <li>Podcasts & Videos</li>
+                                <li>Resources</li>
+                                <li>Software & Tools</li>
+                                <li>Web Standards</li>
+                            </ul>
                         </li>
                     </ul>
                     <div class="mini-container-one">
