Nested a second ul tag in the nav tag

--- a/project_13.html
+++ b/project_13.html
@@ -11,19 +11,23 @@
 
     <body>
         <header>
-            <nav>
-                <p>
-                    <img src="./Images/stark logog.png" alt="Stark Logo" class="first-image">
-                </p>
-                <p class="nav-item">PRODUCT</p>
-                <p class="nav-item">PRICING</p>
-                <p class="nav-item">BLOG</p>
-                <p class="nav-item">LIBRARY</p>
-                <p class="nav-item">SUPPORT</p>
-                <p class="nav-item">LOG IN</p>
-                <p>
-                    <a href="#" class="first-btn">30-DAY FREE TEAM TRIAL</a>
-                </p>
+            <nav class="nav-bar">
+                <ul class="mini-nav-bar-one">
+                    <li>
+                        <img src="./Images/stark logog.png" alt="Stark Logo" class="first-image">
+                    </li>
+                    <li class="nav-item">PRODUCT</li>
+                    <li class="nav-item">PRICING</li>
+                    <li class="nav-item">BLOG</li>
+                    <li class="nav-item">LIBRARY</li>
+                    <li class="nav-item">SUPPORT</li>
+                </ul>
+                <ul class="mini-nav-bar-two">
+                    <li class="nav-item">LOG IN</li>
+                    <li>
+                        <a href="https://account.getstark.co/business-trial" class="first-btn">30-DAY FREE TEAM TRIAL</a>
+                    </li>
+                </ul>
             </nav>
         </header>
         <main>
