Added a sub tab to be displayed when you hover over the first list item in the nav bar

--- a/project_13.html
+++ b/project_13.html
@@ -16,7 +16,34 @@
                     <li>
                         <img src="./Images/stark logog.png" alt="Stark Logo" class="first-image">
                     </li>
-                    <li class="nav-item">PRODUCT</li>
+                    <li class="nav-item nav-item-one">USE CASES
+                            <img src="./Images/drop_down.png" alt="drop down icon" class="mini-image">
+                            <div class="mini-page-one">
+                                <div class="page-item-one">
+                                    <h3>Designers</h3>
+                                    <p>
+                                        Create accessible designs in record time right in Figma & Sketch
+                                    </p>
+                                </div>
+                                <div class="page-item-two">
+                                    <h3>Product Managers</h3>
+                                    <p>Manage accesibility in real time-time across all your projects</p>
+                                </div>
+                                <div class="page-item-three">
+                                    <img src="./Images/white_paper.jpg" alt="White Paper" class="news-image">
+                                    <h3>Read our new white</h3>
+                                    <p>Managing a modern accessibility posture and growing accessibility maturity at any scale.</p>
+                                </div>
+                                <div class="page-item-four">
+                                    <h3>Developers</h3>
+                                    <p>Test and audit your code from early implementation to live product.</p>
+                                </div>
+                                <div class="page-item-five">
+                                    <h3>Compliance Managers</h3>
+                                    <p>Monitor,manage and audit your accessibility posture in one place.</p>
+                                </div>
+                            </div>
+                    </li>
                     <li class="nav-item">PRICING</li>
                     <li class="nav-item">BLOG</li>
                     <li class="nav-item">LIBRARY</li>
